Added Unity Integration

--- a/EnumeratedCollection_Tests/EnumeratedCollection_Tests.csproj
+++ b/EnumeratedCollection_Tests/EnumeratedCollection_Tests.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <Using Include="NUnit.Framework" />
-	<ProjectReference Include="..\EnumeratedCollection\EnumeratedCollection.csproj" />
+	<ProjectReference Include="..\com.ap.enumerated-collection\Runtime\EnumeratedCollection\EnumeratedCollection.csproj" />
   </ItemGroup>
 
 </Project>
