--- a/EnumeratedCollection_Benchmark/EnumeratedCollection_Benchmark.csproj
+++ b/EnumeratedCollection_Benchmark/EnumeratedCollection_Benchmark.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
-	<ProjectReference Include="..\EnumeratedCollection\EnumeratedCollection.csproj" />
+	<ProjectReference Include="..\com.ap.enumerated-collection\Runtime\EnumeratedCollection\EnumeratedCollection.csproj" />
   </ItemGroup>
 
 </Project>
